{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 663,
  "lineage": "d1aa3c1f-06a6-d10c-8a87-4aa9fbedf5c7",
  "resources": [
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05381ab5969848355",
            "arn": "arn:aws:ec2:ap-south-1:454143665149:instance/i-0d4ff2fbb2896a089",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d4ff2fbb2896a089",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new_key-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cfcdd00afbcce003",
            "private_dns": "ip-10-0-101-136.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.136",
            "public_ip": "13.126.207.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0583f69dd9ddde45b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c732a51c002c9740",
            "tags": {
              "DM": "Shriram Deshpande",
              "Department": "PES",
              "Name": "imran-Ec2-testing",
              "Owner": "imran.shaikh@einfochips.com",
              "Project": "Internal POC"
            },
            "tags_all": {
              "DM": "Shriram Deshpande",
              "Department": "PES",
              "Name": "imran-Ec2-testing",
              "Owner": "imran.shaikh@einfochips.com",
              "Project": "Internal POC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04f2c8646ddfda697"
            ]
          },
          "dependencies": [
            "module.ec2-module.data.aws_ami.ubuntu",
            "module.vpc.aws_internet_gateway.example_igw",
            "module.vpc.aws_route_table.public_subnet_route",
            "module.vpc.aws_route_table_association.public_subnet_association1",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.My_virtual_Network",
            "module.web_server_sg.aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:454143665149:internet-gateway/igw-08f251104b1e7b305",
            "id": "igw-08f251104b1e7b305",
            "owner_id": "454143665149",
            "tags": {
              "DM": "Shriram Deshpande",
              "Department": "PES",
              "Name": "My-IGW",
              "Owner": "imran.shaikh@einfochips.com",
              "Project": "Internal POC"
            },
            "tags_all": {
              "DM": "Shriram Deshpande",
              "Department": "PES",
              "Name": "My-IGW",
              "Owner": "imran.shaikh@einfochips.com",
              "Project": "Internal POC"
            },
            "vpc_id": "vpc-02edb0e80a550e7eb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.My_virtual_Network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:454143665149:route-table/rtb-0615adcb7ce4a9ccb",
            "id": "rtb-0615adcb7ce4a9ccb",
            "owner_id": "454143665149",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f251104b1e7b305",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02edb0e80a550e7eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.example_igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.My_virtual_Network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03963687faa3befd9",
            "route_table_id": "rtb-0615adcb7ce4a9ccb",
            "subnet_id": "subnet-0c732a51c002c9740"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.example_igw",
            "module.vpc.aws_route_table.public_subnet_route",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.My_virtual_Network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc3ab12ec7cce6a8",
            "route_table_id": "rtb-0615adcb7ce4a9ccb",
            "subnet_id": "subnet-0de0d8d076d328250"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.example_igw",
            "module.vpc.aws_route_table.public_subnet_route",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.My_virtual_Network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:454143665149:subnet/subnet-0c732a51c002c9740",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c732a51c002c9740",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "454143665149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DM": "Shriram Deshpande",
              "Department": "PES",
              "Name": "PublicSubnet-0",
              "Owner": "imran.shaikh@einfochips.com",
              "Project": "Internal POC"
            },
            "tags_all": {
              "DM": "Shriram Deshpande",
              "Department": "PES",
              "Name": "PublicSubnet-0",
              "Owner": "imran.shaikh@einfochips.com",
              "Project": "Internal POC"
            },
            "vpc_id": "vpc-02edb0e80a550e7eb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.My_virtual_Network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:454143665149:subnet/subnet-0de0d8d076d328250",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de0d8d076d328250",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "454143665149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DM": "Shriram Deshpande",
              "Department": "PES",
              "Name": "PublicSubnet-1",
              "Owner": "imran.shaikh@einfochips.com",
              "Project": "Internal POC"
            },
            "tags_all": {
              "DM": "Shriram Deshpande",
              "Department": "PES",
              "Name": "PublicSubnet-1",
              "Owner": "imran.shaikh@einfochips.com",
              "Project": "Internal POC"
            },
            "vpc_id": "vpc-02edb0e80a550e7eb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.My_virtual_Network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My_virtual_Network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:454143665149:vpc/vpc-02edb0e80a550e7eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02037118f6fd54ee1",
            "default_route_table_id": "rtb-0b2b98f991d278c60",
            "default_security_group_id": "sg-0dea9db8c88cc9d87",
            "dhcp_options_id": "dopt-2db72344",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02edb0e80a550e7eb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2b98f991d278c60",
            "owner_id": "454143665149",
            "tags": {
              "DM": "Shriram Deshpande",
              "Department": "PES",
              "Name": "my-vpc",
              "Owner": "imran.shaikh@einfochips.com",
              "Project": "Internal POC"
            },
            "tags_all": {
              "DM": "Shriram Deshpande",
              "Department": "PES",
              "Name": "my-vpc",
              "Owner": "imran.shaikh@einfochips.com",
              "Project": "Internal POC"
            }
          }
        }
      ]
    },
    {
      "module": "module.web_server_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:454143665149:security-group/sg-04f2c8646ddfda697",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f2c8646ddfda697",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "454143665149",
            "revoke_rules_on_delete": false,
            "tags": {
              "DM": "Shriram Deshpande",
              "Department": "PES",
              "Name": "My_SG-nginx",
              "Owner": "imran.shaikh@einfochips.com",
              "Project": "Internal POC"
            },
            "tags_all": {
              "DM": "Shriram Deshpande",
              "Department": "PES",
              "Name": "My_SG-nginx",
              "Owner": "imran.shaikh@einfochips.com",
              "Project": "Internal POC"
            },
            "timeouts": null,
            "vpc_id": "vpc-02edb0e80a550e7eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.example_igw",
            "module.vpc.aws_route_table.public_subnet_route",
            "module.vpc.aws_route_table_association.public_subnet_association1",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.My_virtual_Network"
          ]
        }
      ]
    }
  ]
}